Added archiving module

--- a/.zpreztorc
+++ b/.zpreztorc
@@ -34,7 +34,8 @@ zstyle ':prezto:load' pmodule \
   'git' \
   'syntax-highlighting' \
   'history-substring-search' \
-  'prompt'
+  'prompt' \
+  'archive'
 
 #
 # Autosuggestions
