--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 set -g mouse on
 set -g default-terminal "screen-256color"
-set-window-option -g mode-keys vi
+#set-window-option -g mode-keys vi
 
 setw -g monitor-activity on
 set -g visual-activity on
