vim c&p tmux bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,5 @@
 set -g mouse on
 set -g default-terminal "screen-256color"
+
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-selection
