--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 set -g mouse on
 set -g default-terminal "screen-256color"
 
+set-window-option -g mode-keys vi
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-selection
