--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,3 +4,9 @@ set -g default-terminal "screen-256color"
 set-window-option -g mode-keys vi
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-selection
+
+# vi binding panel switching
+bind k selectp -U # switch to panel Up
+bind j selectp -D # switch to panel Down
+bind h selectp -L # switch to panel Left
+bind l selectp -R # switch to panel Right
