--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,11 @@
 set -g mouse on
 set -g default-terminal "screen-256color"
+set-window-option -g xterm-keys on
 
 set-window-option -g mode-keys vi
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-selection
+set -sg escape-time 0
 
 # vi binding panel switching
 bind k selectp -U # switch to panel Up
