Add tmuxline snapshot

--- a/ubuntu/.tmux.conf
+++ b/ubuntu/.tmux.conf
@@ -1,3 +1,6 @@
+# Source tmuxline
+source-file ~/dotfiles/ubuntu/tmuxline_snapshot
+
 set -g mouse on
 set -g default-terminal "screen-256color"
 set-window-option -g xterm-keys on
