Added italics iterm and vim note plugins

--- a/macOS/settings/iterm2/com.googlecode.iterm2.plist
+++ b/macOS/settings/iterm2/com.googlecode.iterm2.plist
@@ -89,11 +89,11 @@
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>269 139 606 456 0 0 1680 1050 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>677 492 918 495 0 0 1680 1027 </string>
+	<string>677 453 796 473 0 0 1680 1027 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>80 193 592 584 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 564 570 452 0 0 1680 1027 </string>
+	<string>0 598 1680 429 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>0 575 570 452 0 0 1680 1027 </string>
 	<key>New Bookmarks</key>
@@ -1602,7 +1602,7 @@
 			<key>Tags</key>
 			<array/>
 			<key>Terminal Type</key>
-			<string>xterm-256color</string>
+			<string>xterm-256color-italic</string>
 			<key>Transparency</key>
 			<real>0.1555612056213018</real>
 			<key>Unlimited Scrollback</key>
@@ -1769,7 +1769,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-01-15T09:14:04Z</date>
+	<date>2017-01-18T05:43:49Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>Selection Respects Soft Boundaries</key>
