--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,3 +1,114 @@
-source ~/.vimrc
-
+set nocompatible
+let mapleader = "\<Space>"
+let os = substitute(system('uname'), '\n', '', '')
 set surround
+
+set tabstop=4
+set softtabstop=4
+set shiftwidth=4
+set expandtab
+set autoindent
+set smartindent
+set ruler
+set mouse=a
+set incsearch
+set ignorecase
+set smartcase
+set autoread
+au CursorHold * checktime
+set omnifunc=syntaxcomplete#Complete
+set showcmd
+set modeline
+set modelines=5
+set hidden
+set breakindent
+set spell spelllang=en_us
+set complete+=kspell
+
+set wildmenu
+set wildignorecase
+set wildmode=longest:full,full
+
+"Show airline bar
+set laststatus=2
+
+syntax on
+
+set number
+set relativenumber
+set cursorline
+
+"not recommended for now
+"set nobackup
+
+set backspace=indent,eol,start
+
+filetype plugin indent on
+autocmd FileType html,javascript,css,scheme,sql,vim,zsh,sh,bash setlocal shiftwidth=2 tabstop=2 softtabstop=2
+autocmd FileType crontab setlocal nowritebackup
+:iabbrev </ </<C-X><C-O>
+
+nnoremap j gj
+nnoremap k gk
+nnoremap 0 g0
+nnoremap $ g$
+
+vnoremap j gj
+vnoremap k gk
+vnoremap 0 g0
+vnoremap $ g$
+
+nnoremap <silent> <F5> :let _s=@/ <Bar> :%s/\s\+$//e <Bar> :let @/=_s <Bar> :nohl <Bar> :unlet _s <CR>
+
+"Solarized dark
+syntax enable
+set background=dark
+highlight Comment cterm=italic
+
+" Markdown fenced code syntax highlighting
+au BufNewFile,BufReadPost *.md set filetype=markdown
+let g:markdown_fenced_languages =
+      \ ['java',
+      \ 'scheme',
+      \ 'python',
+      \ 'sql',
+      \ 'vim',
+      \ 'bash=sh',
+      \ 'tex',
+      \ 'zsh',
+      \ 'html',
+      \ 'css',
+      \ 'javascript',
+      \ 'js=javascript',
+      \ 'json=javascript']
+
+"Easy buffer switching
+map <leader>n :bn<cr>
+map <leader>p :bp<cr>
+map <leader>d :bd<cr>
+
+function! OpenLines(nrlines, dir)
+  let nrlines = a:nrlines < 2 ? 2 : a:nrlines
+  let start = line('.') + a:dir
+  call append(start, repeat([''], nrlines))
+  if a:dir < 0
+    normal! 2k
+  else
+    normal! 2j
+  endif
+endfunction
+" Mappings to open multiple lines and enter insert mode.
+nnoremap <Leader>o :<C-U>call OpenLines(v:count, 0)<CR>S
+nnoremap <Leader>O :<C-U>call OpenLines(v:count, -1)<CR>S
+
+nnoremap o o<esc>S
+nnoremap O O<esc>S
+
+" OS specific settings
+if os == 'Linux'
+  set clipboard=unnamedplus
+  hi Normal ctermbg=none
+  highlight NonText ctermbg=none
+else
+  set clipboard=unnamed
+endif
