--- a/ubuntu/.tmux.conf
+++ b/ubuntu/.tmux.conf
@@ -2,7 +2,7 @@
 source-file ~/dotfiles/ubuntu/tmuxline_snapshot
 
 set -g mouse on
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 set-window-option -g xterm-keys on
 
 set-window-option -g mode-keys vi
