--- a/.ideavimrc
+++ b/.ideavimrc
@@ -3,6 +3,7 @@ let mapleader = "\<Space>"
 let os = substitute(system('uname'), '\n', '', '')
 set surround
 
+set scrolloff=5
 set timeoutlen=1000 ttimeoutlen=0
 set tabstop=4
 set softtabstop=4
@@ -30,6 +31,9 @@ set wildmenu
 set wildignorecase
 set wildmode=longest:full,full
 
+" OP visual mode .
+vnoremap . :norm.<CR>
+
 "Show airline bar
 set laststatus=2
 
@@ -47,6 +51,8 @@ set backspace=indent,eol,start
 filetype plugin indent on
 autocmd FileType html,javascript,css,scheme,sql,vim,zsh,sh,bash setlocal shiftwidth=2 tabstop=2 softtabstop=2
 autocmd FileType crontab setlocal nowritebackup
+autocmd FileType markdown,text setlocal wrap linebreak nolist
+
 :iabbrev </ </<C-X><C-O>
 
 nnoremap j gj
@@ -74,6 +80,7 @@ let g:markdown_fenced_languages =
       \ 'python',
       \ 'sql',
       \ 'vim',
+      \ 'viml=vim',
       \ 'bash=sh',
       \ 'tex',
       \ 'zsh',
