--- a/.ideavimrc
+++ b/.ideavimrc
@@ -59,11 +59,31 @@ nnoremap j gj
 nnoremap k gk
 nnoremap 0 g0
 nnoremap $ g$
+nnoremap ^ g^
+nnoremap I g^i
+nnoremap A g$a
+
+nnoremap gj j
+nnoremap gk k
+nnoremap g0 0
+nnoremap g$ $
+nnoremap g^ ^
+nnoremap gI I
+nnoremap gA A
 
 vnoremap j gj
 vnoremap k gk
 vnoremap 0 g0
 vnoremap $ g$
+vnoremap ^ g^
+
+vnoremap gj j
+vnoremap gk k
+vnoremap g0 0
+vnoremap g$ $
+vnoremap g^ ^
+vnoremap gI I
+vnoremap gA A
 
 nnoremap <silent> <F5> :let _s=@/ <Bar> :%s/\s\+$//e <Bar> :let @/=_s <Bar> :nohl <Bar> :unlet _s <CR>
 
