Use cask_upgrade

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "k"]
 	path = k
 	url = https://github.com/supercrabtree/k.git
+[submodule "cask_upgrade"]
+	path = cask_upgrade
+	url = https://gist.github.com/9c72e469b1cbec35c7c430ce03de2a6b.git
