--- a/ubuntu/.tmux.conf
+++ b/ubuntu/.tmux.conf
@@ -6,8 +6,8 @@ set -g default-terminal "tmux-256color"
 set-window-option -g xterm-keys on
 
 set-window-option -g mode-keys vi
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-selection
+bind-key -Tcopy-mode-vi v send -X begin-selection
+bind-key -Tcopy-mode-vi y send -X copy-selection
 set -sg escape-time 0
 
 # vi binding panel switching
