--- a/ubuntu/.gitconfig
+++ b/ubuntu/.gitconfig
@@ -2,9 +2,7 @@
     email = willy.h.yang@gmail.com
     name = William Yang
 [core]
-    excludesfile = /home/william/.gitignore_global
+    excludesfile = /home/will/.gitignore_global
     editor = vim
 [credential]
     helper = cache --timeout=3600
-[http]
-	sslVerify = false
