--- a/.vsvimrc
+++ b/.vsvimrc
@@ -1,7 +1,6 @@
 set nocompatible
 let mapleader = "\<Space>"
 let os = substitute(system('uname'), '\n', '', '')
-set surround
 
 set scrolloff=5
 set timeoutlen=1000 ttimeoutlen=0
@@ -15,6 +14,7 @@ set ruler
 set mouse=a
 set incsearch
 set ignorecase
+set infercase
 set smartcase
 set autoread
 au CursorHold * checktime
@@ -24,8 +24,7 @@ set modeline
 set modelines=5
 set hidden
 set breakindent
-set spell spelllang=en_us
-set complete+=kspell
+set spelllang=en_us
 
 set foldenable
 set foldlevelstart=10
@@ -36,8 +35,19 @@ set wildmenu
 set wildignorecase
 set wildmode=longest:full,full
 
+if has('unnamedplus')
+  set clipboard=unnamed,unnamedplus
+else
+  set clipboard=unnamed
+endif
+
 " OP visual mode .
 vnoremap . :norm.<CR>
+xnoremap . :norm.<CR>
+
+xnoremap Q :'<,'>:normal @q<CR>
+
+autocmd VimResized * wincmd =
 
 "Show airline bar
 set laststatus=2
@@ -66,35 +76,44 @@ nnoremap <leader>sv :source $MYVIMRC<CR>
 
 nnoremap <leader>s :mksession<CR>
 
-nnoremap j gj
-nnoremap k gk
+nnoremap <expr> j v:count ? 'j' : 'gj'
+nnoremap <expr> k v:count ? 'k' : 'gk'
+
 nnoremap 0 g0
 nnoremap $ g$
 nnoremap ^ g^
 nnoremap I g^i
 nnoremap A g$a
 
-nnoremap gj j
-nnoremap gk k
+nnoremap <expr> gj v:count ? 'gj' : 'j'
+nnoremap <expr> gk v:count ? 'gk' : 'k'
+
 nnoremap g0 0
 nnoremap g$ $
 nnoremap g^ ^
 nnoremap gI I
 nnoremap gA A
 
-vnoremap j gj
-vnoremap k gk
+vnoremap <expr> j v:count ? 'j' : 'gj'
+vnoremap <expr> k v:count ? 'k' : 'gk'
+
 vnoremap 0 g0
 vnoremap $ g$
 vnoremap ^ g^
+" vnoremap I g^i
+" vnoremap A g$a
 
-vnoremap gj j
-vnoremap gk k
+vnoremap <expr> gj v:count ? 'gj' : 'j'
+vnoremap <expr> gk v:count ? 'gk' : 'k'
+
 vnoremap g0 0
 vnoremap g$ $
 vnoremap g^ ^
 vnoremap gI I
 vnoremap gA A
+
+noremap <F3> :call Spelling()<CR>
+noremap <leader>3 :call Spelling()<CR>
 
 nnoremap <silent> <F5> :let _s=@/ <Bar> :%s/\s\+$//e <Bar> :let @/=_s <Bar> :nohl <Bar> :unlet _s <CR>
 
@@ -145,11 +164,9 @@ nnoremap O O<esc>S
 
 " OS specific settings
 if os == 'Linux'
-  set clipboard=unnamedplus
   hi Normal ctermbg=none
   highlight NonText ctermbg=none
 
-  " test cursor change
   if has("autocmd")
     au VimEnter,InsertLeave * silent execute '!echo -ne "\e[2 q"' | redraw!
     au InsertEnter,InsertChange *
@@ -161,7 +178,6 @@ if os == 'Linux'
     au VimLeave * silent execute '!echo -ne "\e[ q"' | redraw!
   endif
 else
-  set clipboard=unnamed
   let &t_SI = "\<Esc>]50;CursorShape=1\x7"
   let &t_SR = "\<Esc>]50;CursorShape=2\x7"
   let &t_EI = "\<Esc>]50;CursorShape=0\x7"
@@ -171,3 +187,20 @@ else
   " let &t_SR = "\<Esc>Ptmux;\<Esc>\<Esc>]50;CursorShape=2\x7\<Esc>\\"
   " let &t_EI = "\<Esc>Ptmux;\<Esc>\<Esc>]50;CursorShape=0\x7\<Esc>\\"
 endif
+
+function! Spelling()
+  setlocal spell!
+  if &spell
+    set complete+=kspell
+    echo "Spell mode enabled"
+  else
+    set complete-=kspell
+    echo "Spell mode disabled"
+  endif
+endfunction
+
+augroup autoSaveAndRead
+  autocmd!
+  autocmd TextChanged,InsertLeave,FocusLost * silent! wall
+  autocmd CursorHold * silent! checktime
+augroup END
