Sync ideavimrc & vsvimrc w/ vimrc

--- a/common/.vsvimrc
+++ b/common/.vsvimrc
@@ -64,7 +64,7 @@ set cursorline
 set backspace=indent,eol,start
 
 filetype plugin indent on
-autocmd FileType html,javascript,css,scheme,sql,vim,zsh,sh,bash setlocal shiftwidth=2 tabstop=2 softtabstop=2
+autocmd FileType html,javascript,css,scheme,vim,zsh,sh,bash setlocal shiftwidth=2 tabstop=2 softtabstop=2
 autocmd FileType crontab setlocal nowritebackup
 autocmd FileType markdown,text setlocal wrap linebreak nolist
 
@@ -201,6 +201,6 @@ endfunction
 
 augroup autoSaveAndRead
   autocmd!
-  autocmd TextChanged,InsertLeave,FocusLost * silent! wall
+  " autocmd TextChanged,InsertLeave,FocusLost * silent! wall
   autocmd CursorHold * silent! checktime
 augroup END
