--- a/ubuntu/config/.gitconfig
+++ b/ubuntu/config/.gitconfig
@@ -2,7 +2,7 @@
     email = willy.h.yang@gmail.com
     name = William Yang
 [core]
-    excludesfile = /home/william/.gitignore_global
+    excludesfile = $HOME/.gitignore_global
     editor = vim
 [credential]
     helper = cache --timeout=3600
