Resurrect ssh & python(3) & enable experimental features

--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -25,6 +25,9 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 
 set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-save-shell-history 'on'
+set -g @resurrect-processes 'ssh python python3'
 
 set -g @continuum-restore 'on'
 
