--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -9,6 +9,7 @@ set-window-option -g mode-keys vi
 bind-key -Tcopy-mode-vi v send -X begin-selection
 bind-key -Tcopy-mode-vi y send -X copy-selection
 set -sg escape-time 0
+setw -g aggressive-resize on
 
 # vi binding panel switching
 bind k selectp -U # switch to panel Up
