Fix up gitignore_global in gitconfig

--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -1,13 +1,16 @@
 # Source tmuxline
 source-file ~/dotfiles/config/tmux/tmuxline_snapshot
 
-set -g mouse on
+set -g mode-mouse on
+setw -g mode-mouse on
+# set -g mouse on
 set -g default-terminal "tmux-256color"
 set-window-option -g xterm-keys on
+set-option -g default-shell /usr/bin/zsh
 
 set-window-option -g mode-keys vi
-bind-key -Tcopy-mode-vi v send -X begin-selection
-bind-key -Tcopy-mode-vi y send -X copy-selection
+# bind-key -Tcopy-mode-vi v send -X begin-selection
+# bind-key -Tcopy-mode-vi y send -X copy-selection
 set -sg escape-time 0
 setw -g aggressive-resize on
 
