--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -4,6 +4,7 @@ source-file ~/dotfiles/config/tmux/tmuxline_snapshot
 set -g mouse on
 set -g default-terminal "tmux-256color"
 set-window-option -g xterm-keys on
+set-option -g renumber-windows on
 
 set-window-option -g mode-keys vi
 bind-key -Tcopy-mode-vi v send -X begin-selection
