--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -9,8 +9,8 @@ set-window-option -g xterm-keys on
 set-option -g default-shell /usr/bin/zsh
 
 set-window-option -g mode-keys vi
-# bind-key -Tcopy-mode-vi v send -X begin-selection
-# bind-key -Tcopy-mode-vi y send -X copy-selection
+bind-key -Tcopy-mode-vi v send -X begin-selection
+bind-key -Tcopy-mode-vi y send -X copy-selection
 set -sg escape-time 0
 setw -g aggressive-resize on
 
