cherry-pick 8e77b70cb02fd4b574ede1b99dbf67795129a7c1

--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -1,9 +1,9 @@
 # Source tmuxline
 source-file ~/dotfiles/config/tmux/tmuxline_snapshot
 
-set -g mode-mouse on
-setw -g mode-mouse on
-# set -g mouse on
+# set -g mode-mouse on
+# setw -g mode-mouse on
+set -g mouse on
 set -g default-terminal "tmux-256color"
 set-window-option -g xterm-keys on
 set-option -g default-shell /usr/bin/zsh
