--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -34,7 +34,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
-set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-save-shell-history 'on'
 set -g @resurrect-processes 'ssh python python3'
