cherry-pick ac75f78c42fbc7d45d7cb4c9683a64cd402e9131

--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -41,5 +41,8 @@ set -g @resurrect-processes 'ssh python python3'
 
 set -g @continuum-restore 'on'
 
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
