--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -2,7 +2,8 @@
 source-file ~/dotfiles/config/tmux/tmuxline_snapshot
 
 set -g mouse on
-set -g default-terminal "tmux-256color"
+set -g default-terminal 'tmux-256color'
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set-window-option -g xterm-keys on
 set-option -g renumber-windows on
 
