cherry-pick e55be49d57ff72886274d5f5552ac08062225b1e

--- a/env/config/.gitconfig
+++ b/env/config/.gitconfig
@@ -3,6 +3,6 @@
     name = William Yang
 [core]
     excludesfile = ~/.gitignore_global
-    editor = vim
+    editor = nvim
 [credential]
     helper = cache --timeout=3600
