--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -4,7 +4,8 @@ source-file ~/dotfiles/config/tmux/tmuxline_snapshot
 # set -g mode-mouse on
 # setw -g mode-mouse on
 set -g mouse on
-set -g default-terminal "tmux-256color"
+set -g default-terminal 'tmux-256color'
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set-window-option -g xterm-keys on
 set-option -g default-shell /usr/bin/zsh
 
