branch to 162vm

--- a/env/config/.gitconfig
+++ b/env/config/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-    email = willy.h.yang@gmail.com
+    email = william_yang@berkeley.edu
     name = William Yang
 [core]
     excludesfile = ~/.gitignore_global
