--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -7,16 +7,16 @@ set -g mouse on
 set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set-window-option -g xterm-keys on
-set-option -g default-shell /usr/bin/zsh
+set-option -g default-shell /home/linuxbrew/.linuxbrew/bin/zsh
 
 set-window-option -g mode-keys vi
-bind-key -t vi-edit Up history-up
-bind-key -t vi-edit Down history-down
-unbind-key -t vi-copy Space     ;   bind-key -t vi-copy v begin-selection
-unbind-key -t vi-copy Enter     ;   bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-unbind-key -t vi-copy C-v       ;   bind-key -t vi-copy C-v rectangle-toggle
-unbind-key -t vi-copy [         ;   bind-key -t vi-copy [ begin-selection
-unbind-key -t vi-copy ]         ;   bind-key -t vi-copy ] copy-selection
+# bind-key -t vi-edit Up history-up
+# bind-key -t vi-edit Down history-down
+# unbind-key -t vi-copy Space     ;   bind-key -t vi-copy v begin-selection
+# unbind-key -t vi-copy Enter     ;   bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind-key -t vi-copy C-v       ;   bind-key -t vi-copy C-v rectangle-toggle
+# unbind-key -t vi-copy [         ;   bind-key -t vi-copy [ begin-selection
+# unbind-key -t vi-copy ]         ;   bind-key -t vi-copy ] copy-selection
 set -sg escape-time 0
 setw -g aggressive-resize on
 
