add Rectangle install command and config file, update slate config (use only window hints), update tmuxline_snapshot, update prezto setup, update symlinks (include rectangle config file)

--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -2,6 +2,7 @@
 source-file ~/dotfiles/config/tmux/tmuxline_snapshot
 
 set -g mouse on
+set -g set-clipboard on
 set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set-window-option -g xterm-keys on
@@ -32,6 +33,8 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-save-shell-history 'on'
 set -g @resurrect-processes 'ssh python python3'
+
+set -g @yank_action 'copy-pipe' # or 'copy-pipe-and-cancel' for the default
 
 set -g @continuum-restore 'on'
 
