--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -1,15 +1,19 @@
 # Source tmuxline
 source-file ~/dotfiles/config/tmux/tmuxline_snapshot
-
+# 
 # set -g mode-mouse on
 # setw -g mode-mouse on
 set -g mouse on
+set -g set-clipboard on
 set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set-window-option -g xterm-keys on
-set-option -g default-shell /home/linuxbrew/.linuxbrew/bin/zsh
-
+set-option -g default-shell /usr/bin/zsh
+set-option -g renumber-windows on
+# 
 set-window-option -g mode-keys vi
+bind-key -Tcopy-mode-vi v send -X begin-selection
+bind-key -Tcopy-mode-vi y send -X copy-selection
 # bind-key -t vi-edit Up history-up
 # bind-key -t vi-edit Down history-down
 # unbind-key -t vi-copy Space     ;   bind-key -t vi-copy v begin-selection
@@ -39,6 +43,8 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-save-shell-history 'on'
 set -g @resurrect-processes 'ssh python python3'
+
+set -g @yank_action 'copy-pipe' # or 'copy-pipe-and-cancel' for the default
 
 set -g @continuum-restore 'on'
 
