--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -35,6 +35,8 @@ set -g @resurrect-processes 'ssh python python3'
 
 set -g @continuum-restore 'on'
 
+set -g @yank_action 'copy-pipe'
+
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
