hammerspon + tmux update

--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -1,6 +1,9 @@
 # Source tmuxline
 source-file ~/dotfiles/config/tmux/tmuxline_snapshot
 
+set -g set-titles on
+set -g set-titles-string '[#S:#I] #W (#{pane_current_command}) – #{b:pane_current_path}'
+
 set -g mouse on
 set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
