--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "config/home/.hammerspoon/hotswitch-hs"]
 	path = config/home/.hammerspoon/hotswitch-hs
 	url = https://github.com/oniatsu/HotSwitch-HS.git
+[submodule "config/home/.hammerspoon/Spoons/hs_select_window.spoon"]
+	path = config/home/.hammerspoon/Spoons/hs_select_window.spoon
+	url = https://github.com/triyangle/hs_select_window.spoon
