--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -1,6 +1,7 @@
 # Source tmuxline
 source-file ~/dotfiles/config/tmux/tmuxline_snapshot
 
+set -g set-clipboard on
 set -g set-titles on
 set -g set-titles-string '[#S:#I] #W (#{pane_current_command}) – #{b:pane_current_path}'
 
@@ -38,7 +39,7 @@ set -g @resurrect-processes 'ssh python python3'
 
 set -g @continuum-restore 'on'
 
-set -g @yank_action 'copy-pipe'
+set -g @yank_action 'copy-pipe-no-clear'
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
