nested ssh mouse

--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -6,6 +6,7 @@ set -g set-titles on
 set -g set-titles-string '[#S:#I] #W (#{pane_current_command}) – #{b:pane_current_path}'
 
 set -g mouse on
+bind m set -g mouse \; display "Mouse: #{?mouse,ON,OFF}"
 set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set-window-option -g xterm-keys on
