--- a/config/home/.tmux.conf
+++ b/config/home/.tmux.conf
@@ -39,7 +39,7 @@ set -g @resurrect-processes 'ssh python python3'
 
 set -g @continuum-restore 'on'
 
-set -g @yank_action 'copy-pipe-no-cancel'
+set -g @yank_action 'copy-pipe-no-clear'
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
